added markdown to readme

--- a/README
+++ b/README
@@ -1,1 +1,7 @@
+README
+======
 Some dotfiles I've hacked in order to soddisfy my needs...
+
+Disclaimer
+----------
+Feel free to grab everything, but use it at your own risk...
